# qemu-10.2.0

./: aa  bb
disas/: disas-common.c  disas-target.c  m68k-opc.h  m68k.c
hw/m68k/: Kconfig  load_line_number_info.c  m68332.c  m68332_intc.c  m68332_qsm.c  m68332_sim.c  m68332_tpu.c  m68332_tpu_ram.c  mcf.h  mcf5208.c  mcf_intc.c  mcf_qsm.c  mcf_sim.c  mcf_tpu.c  mcf_tpu.h  mcf_tpu_ram.c  meson.build
include/disas/: disas.h
include/hw/: elf_ops.h.inc
include/hw/m68k/: m68332.h  mcf.h
include/qemu/: log.h  qemu-plugin.h
plugins/: api.c
util/: log.c
